--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -8,6 +8,6 @@ footer {
     justify-content: center;
     align-items: center;
     display: flex;
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
